/* 
  Copyright (c) 2025 SyntectAI
  Licensed under the CC BY-NC-SA 4.0 International License.
*/
syntax = "proto3";

package auth; 

service AuthService {
  rpc SignUp(AuthRequest) returns (AuthResponse);
  rpc SignIn(AuthRequest) returns (AuthResponse);
}

message AuthRequest {
  string login = 1;
  string password = 2;
}

message AuthResponse {
  string accessToken = 1;
}

message ValidateTokenRequest {
  string accessToken = 1;
}

enum Role {
  ADMIN = 0;
  USER = 1;
}

message User {
  int32 id = 1;
  string lgin = 2;
  Role role = 3;
  string createdAt = 4;
  string updatedAt = 5;
}